Layout improvements and added tag filter to showcase page

--- a/public/sass/components/_base.scss
+++ b/public/sass/components/_base.scss
@@ -1,11 +1,24 @@
 @include border-box-sizing;
 
-body {
+html {
   background: $body-bg;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
   color: $base-font-color;
   font-family: $base-font-family;
   font-weight: $base-font-weight;
   margin: 0;
+  @include breakpoint($breakpoint-small-width) {
+    margin: 0 20px;
+  }
+  @include breakpoint($breakpoint-medium-width) {
+    margin: 0 40px;
+  }
   @media print {
     background: #fff;
     margin: 0;
