--- a/server/views/showcase.ejs
+++ b/server/views/showcase.ejs
@@ -12,7 +12,7 @@
           learning new approaches and perspectives in order to solve problems better.
         </p>
         <p>
-          I've mostly stuck with web technologies, as the Internet and sharing of
+          I mostly work with web technologies, as the Internet and sharing of
           data and knowledge is something that interests me. I'm a huge Open Source
           fan and take pleasure in sharing code and knowledge.
         </p>
