Fixed CV markup

--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -325,4 +325,5 @@
         <p>Last Updated: <%= lastUpdated %> <span class="no-print">- <a href="/cv/download">Download this CV (PDF)</a></span></p>
       </footer>
     </div>
-  <% include partials/head %>
+  </body>
+</html>
