--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -118,6 +118,7 @@
               July 2013 &ndash; October 2014
             </div>
           </header>
+          <p>Working on an EPR used by the Moorfields Eye Hospital.</p>
           <p>
             Full stack development (although mostly front-end work); re-architect
             the front-end to be maintainable and accessible; helping with back-end
