Fixed bad grammar

--- a/server/views/showcase.ejs
+++ b/server/views/showcase.ejs
@@ -7,7 +7,7 @@
       <section class="section intro">
         <h2>Showcase</h2>
         <p>
-          I've started writing code from a young age and still very much enjoy
+          I started writing code as a hobby from a young age and still very much enjoy
           programming and creatively solving problems. I'm always interested in
           learning new approaches and perspectives in order to solve problems better.
         </p>
