--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -53,7 +53,7 @@
           <h3>General / Personal</h3>
           <ul>
             <li>Agile / Scrum / Waterfall</li>
-            <li>Peer programming</li>
+            <li>Pair programming</li>
             <li>Team player</li>
             <li>Passionate</li>
             <li>Open Source contributer</li>
