--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -3,18 +3,23 @@
   @include trailer(1, $base-font-size, padding);
   @include leader(1, $base-font-size, padding);
   border-top: 1px solid #ccc;
+
   ul {
     @include clearfix;
     padding: 0;
   }
+
   li {
     @include trailer(1, $base-font-size, margin);
+
     @include breakpoint($breakpoint-small-width) {
       @include trailer(0);
       @include span(1 of 2);
     }
+
     &:last-child {
       @include trailer(0, $base-font-size, margin);
+
       @include breakpoint($breakpoint-small-width) {
         @include span(1 of 2 last);
       }
@@ -22,6 +27,7 @@
     list-style: none;
     padding: 0;
   }
+
   a {
     @include adjust-font-size-to($base-font-size * 1.5, 1.8);
     border: 2px solid #666;
@@ -30,10 +36,13 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+    transition: background 0.3s ease-in-out;
+
     &:hover {
-      background: #eee;
+      background: #f8f8f8;
       border-color: #000;
     }
+
     &:focus {
       text-decoration: underline;
       border-color: #990003;
