Updated CV and showcase

--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -14,8 +14,8 @@
         <h2>Career Objective</h2>
         <div class="content-block">
           <p>
-            A JavaScript developer, either front-end or full-stack, working on exciting projects using the latest technologies to create useful and accessible
-            web applications.
+            A full-stack JavaScript developer workring with the latest technologies
+            to create useful and accessible web applications.
           </p>
         </div>
       </section>
@@ -24,14 +24,12 @@
         <section class="content-block">
           <h3>Front-end Development</h3>
           <ul>
-            <li>JavaScript (ES5)</li>
-            <li>HTML(5)</li>
-            <li>CSS(3)</li>
-            <li>Sass</li>
-            <li>Build tools (Grunt etc)</li>
+            <li>JavaScript (ES5 &amp; ES6), HTML &amp; CSS</li>
             <li>Accessibility / Web Standards / SEO</li>
             <li>Cross browser knowledge</li>
             <li>Responsive layouts</li>
+            <li>Sass</li>
+            <li>Build tools / Bundlers</li>
             <li>Adobe Suite</li>
             <li>Unit / Integration Testing</li>
           </ul>
@@ -65,12 +63,14 @@
         <section class="content-block">
           <h3>Front-end Development</h3>
           <ul>
+            <li>AngularJS</li>
+            <li>React</li>
             <li>jQuery</li>
             <li>KnockoutJS</li>
-            <li>AngularJS</li>
+            <li>Grunt, gulp, webpack</li>
             <li>OOP / MVC / MVVM</li>
             <li>Compass / Foundation / Susy / Bootstrap</li>
-            <li>Jasmine / Mocha / SinonJS / PhantomJS</li>
+            <li>Jasmine / Mocha / SinonJS / PhantomJS / Jest</li>
             <li>Web Components / Polymer</li>
             <li>Sencha Touch</li>
           </ul>
@@ -99,7 +99,10 @@
         <section class="content-block">
           <header class="header">
             <div class="overview">
-              <h3 class="company">Proxima Web Ltd</h3>
+              <h3 class="company">
+                Proxima Web Ltd -
+                <a href="http://proxima-web.com" rel="nofollow">http://proxima-web.com</a>
+              </h3>
               <p class="title">Director</p>
             </div>
             <div class="date">
@@ -111,14 +114,33 @@
         <section class="content-block">
           <header class="header">
             <div class="overview">
-              <h3 class="company">OpenEyes Foundation</h3>
+              <h3 class="company">
+                Fathom London Ltd -
+                <a href="http://fathomlondon.com/" rel="nofollow">http://fathomlondon.com/</a>
+              </h3>
+              <p class="title">User Interface Developer</p>
+            </div>
+            <div class="date">
+              Nov 2014 &ndash; February 2015
+            </div>
+          </header>
+          <p>Working on trading and investment web apps.</p>
+          <p>I worked on projects using AngularJS, phonegap, CSS3 etc. I did a lot of mobile &amp; tablet optimisation work.</p>
+        </section>
+        <section class="content-block">
+          <header class="header">
+            <div class="overview">
+              <h3 class="company">
+                OpenEyes Foundation -
+                <a href="https://github.com/openeyes" rel="nofollow">https://github.com/openeyes</a>
+              </h3>
               <p class="title">User Interface Developer</p>
             </div>
             <div class="date">
               July 2013 &ndash; October 2014
             </div>
           </header>
-          <p>Working on an EPR used by the Moorfields Eye Hospital.</p>
+          <p>Working on an open source <em>Electronic Patient Record</em> system used by the Moorfields Eye Hospital.</p>
           <p>
             Full stack development (although mostly front-end work); re-architect
             the front-end to be maintainable and accessible; helping with back-end
@@ -132,7 +154,10 @@
         <section class="content-block">
           <header class="header">
             <div class="overview">
-              <h3 class="company">Possible Worldwide</h3>
+              <h3 class="company">
+                Possible Worldwide -
+                <a href="http://www.possible.com/" rel="nofollow">http://www.possible.com/</a>
+              </h3>
               <p class="title">Principle User Interface developer</p>
             </div>
             <div class="date">
@@ -149,7 +174,10 @@
         <section class="content-block">
           <header class="header">
             <div class="overview">
-              <h3 class="company">Fortune Cookie</h3>
+              <h3 class="company">
+                Fortune Cookie -
+                <a href="http://fortunecookie.co.uk/" rel="nofollow">http://fortunecookie.co.uk/</a>
+              </h3>
               <p class="title">User Interface developer</p>
             </div>
             <div class="date">
@@ -161,7 +189,10 @@
         <section class="content-block">
           <header class="header">
             <div class="overview">
-              <h3 class="company">Hoop Associates</h3>
+              <h3 class="company">
+                Hoop Associates -
+                <a href="https://www.uxblondon.com/" rel="nofollow">https://www.uxblondon.com/</a>
+              </h3>
               <p class="title">Deputy development team manager</p>
             </div>
             <div class="date">
@@ -173,7 +204,10 @@
         <section class="content-block">
           <header class="header">
             <div class="overview">
-              <h3 class="company">Hoop Associates</h3>
+              <h3 class="company">
+                Hoop Associates -
+                <a href="https://www.uxblondon.com/" rel="nofollow">https://www.uxblondon.com/</a>
+              </h3>
               <p class="title">Web Developer</p>
             </div>
             <div class="date">
@@ -288,7 +322,7 @@
         <h2>Showcase / Links</h2>
         <div class="content-block">
           <h3>Work / Portfolio</h3>
-          <p>View my <a href="http://richardwillis.co">personal website</a> for examples of work I've done.</p>
+          <p>View my <a href="http://richardwillis.co/showcase">personal website</a> for examples of work I've done.</p>
           <h3>On-line Profiles:</h3>
           <ul>
             <li>
