--- a/server/views/showcase.ejs
+++ b/server/views/showcase.ejs
@@ -60,6 +60,17 @@
         <section class="content-block" data-tags='["php","js"]'>
           <header class="header">
             <div class="overview">
+              <h3>React Seed</h3>
+              <p class="description">Seed project for React apps using ES6 &amp; webpack</p>
+              <p class="repo"><a href="https://github.com/badsyntax/react-seed">https://github.com/badsyntax/react-seed</a></p>
+            </div>
+          </header>
+          <p>A boilerplate for building React apps with ES6, JSX and webpack.</p>
+        </section>
+
+        <section class="content-block" data-tags='["php","js"]'>
+          <header class="header">
+            <div class="overview">
               <h3>OpenEyes</h3>
               <p class="description">An Open Source electronic patient record system</p>
               <p class="repo"><a href="https://github.com/openeyes">https://github.com/openeyes</a></p>
