--- a/server/views/showcase.ejs
+++ b/server/views/showcase.ejs
@@ -57,7 +57,7 @@
           </p>
         </section>
 
-        <section class="content-block" data-tags='["php","js"]'>
+        <section class="content-block" data-tags='["js"]'>
           <header class="header">
             <div class="overview">
               <h3>React Seed</h3>
