Minor layout fixes

--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -14,7 +14,7 @@
         <h2>Career Objective</h2>
         <div class="content-block">
           <p>
-            A full-stack JavaScript developer workring with the latest technologies
+            A full-stack JavaScript developer working with the latest technologies
             to create useful and accessible web applications.
           </p>
         </div>
