--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -6,16 +6,7 @@
         <h2>Profile</h2>
         <div class="content-block">
           <p>
-            A web developer with more than 7 years of commercial web development experience.
-          </p>
-        </div>
-      </section>
-      <section class="section career-objective">
-        <h2>Career Objective</h2>
-        <div class="content-block">
-          <p>
-            A full-stack JavaScript developer working with the latest technologies
-            to create useful and accessible web applications.
+            An experienced full-stack web developer specializing in JavaScript development.
           </p>
         </div>
       </section>
@@ -64,7 +55,7 @@
           <h3>Front-end Development</h3>
           <ul>
             <li>AngularJS</li>
-            <li>React</li>
+            <li>React / Redux</li>
             <li>jQuery</li>
             <li>KnockoutJS</li>
             <li>Grunt, gulp, webpack</li>
@@ -109,7 +100,7 @@
               July 2013 &ndash; Present
             </div>
           </header>
-          <p>Managing my own successful web development company; managing accounts and servers.</p>
+          <p>Managing my own successful web development company.</p>
         </section>
         <section class="content-block">
           <header class="header">
@@ -118,14 +109,14 @@
                 Fathom London Ltd -
                 <a href="http://fathomlondon.com/" rel="nofollow">http://fathomlondon.com/</a>
               </h3>
-              <p class="title">User Interface Developer</p>
+              <p class="title">Senior User Interface Developer</p>
             </div>
             <div class="date">
-              Nov 2014 &ndash; February 2015
+              Nov 2014 &ndash; April 2016
             </div>
           </header>
-          <p>Working on trading and investment web apps.</p>
-          <p>I worked on projects using AngularJS, phonegap, CSS3 etc. I did a lot of mobile &amp; tablet optimisation work.</p>
+          <p>Front-end development on trading and investment web applications built in AngularJS; integration with realtime C++ back-ends.</p>
+          <p>Development of HTTP REST API built in Node.js for an in-house resource planner system.</p>
         </section>
         <section class="content-block">
           <header class="header">
@@ -134,18 +125,13 @@
                 OpenEyes Foundation -
                 <a href="https://github.com/openeyes" rel="nofollow">https://github.com/openeyes</a>
               </h3>
-              <p class="title">User Interface Developer</p>
+              <p class="title">Senior User Interface Developer</p>
             </div>
             <div class="date">
               July 2013 &ndash; October 2014
             </div>
           </header>
-          <p>Working on an open source <em>Electronic Patient Record</em> system used by the Moorfields Eye Hospital.</p>
-          <p>
-            Full stack development (although mostly front-end work); re-architect
-            the front-end to be maintainable and accessible; helping with back-end
-            tasks when required.
-          </p>
+          <p>Full stack development on an open source <em>Electronic Patient Record</em> system used by the Moorfields Eye Hospital.</p>
           <p>
             Towards the end of my contract I was part of a POC team and delivered
             a SPA using AngularJS with a Scala HTTP REST API.
@@ -165,10 +151,7 @@
             </div>
           </header>
           <p>
-            Leading the front-end development on various high profile websites,
-            using some of the latest technologies at the time; working
-            with .NET solutions; sharing my knowledge and skills with my
-            colleagues and always available to help and offer advice.
+            Leading the front-end development on various high profile websites built in .NET (C#) solutions; sharing my knowledge and skills with my colleagues and always available to help and offer advice.
           </p>
         </section>
         <section class="content-block">
@@ -184,7 +167,7 @@
               September 2010 &ndash; August 2012
             </div>
           </header>
-          <p>Creating cross-browser user interfaces; integration into .NET solutions.</p>
+          <p>Front-end development on various high profile websites; integration into .NET (C#) solutions.</p>
         </section>
         <section class="content-block">
           <header class="header">
@@ -199,7 +182,7 @@
               August 2009 &ndash; August 2010
             </div>
           </header>
-          <p>Full stack development; managing a small development team.</p>
+          <p>Full stack development (LAMP); managing a small development team.</p>
         </section>
         <section class="content-block">
           <header class="header">
@@ -215,7 +198,7 @@
             </div>
           </header>
           <p>
-            Full stack development; developing an in-house CMS and creating
+            Full stack development (LAMP); developing an in-house CMS and creating
             usable websites. I was part of the full life-cycle, including UX,
             Design, Development &amp; Dev Ops.
           </p>
@@ -231,7 +214,7 @@
             </div>
           </header>
           <p>
-            Full stack development; creating custom web solutions including
+            Full stack development (LAMP); creating custom web solutions including
             in-house bulk emailing system and a race results management system.
           </p>
         </section>
@@ -268,7 +251,7 @@
           </header>
           <p>
             Migrating hard-copy reports into a mining portal system; minor development
-            tasks on the portal; creating micro-sites for the company intra-net.
+            tasks on the portal; creating micro-sites for the company intranet.
           </p>
         </section>
       </section>
@@ -355,7 +338,7 @@
           Richard Willis -
           <%- link_to_if(showLinks, 'richard@proxima-web.com', 'mailto:richard@proxima-web.com') %> -
           <%- link_to_if(showLinks, 'richardwillis.co', 'http://richardwillis.co') %> -
-          07954216809
+          <%= number %>
         </p>
         <p>Last Updated: <%= lastUpdated %> <span class="no-print">- <a href="/cv/download">Download this CV (PDF)</a></span></p>
       </footer>
