--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -6,7 +6,7 @@
         <ul class="contact">
           <li><%- link_to_if(showLinks, 'richard@proxima-web.com', 'mailto:richard@proxima-web.com') %></li>
           <li><%- link_to_if(showLinks, 'richardwillis.co', 'http://richardwillis.co') %></li>
-          <li>07954216809</li>
-          <li>London, UK</li>
+          <li><%= number %></li>
+          <li><%= location %></li>
         </ul>
       </header>
