--- a/server/views/showcase.ejs
+++ b/server/views/showcase.ejs
@@ -23,6 +23,7 @@
         <div class="content-block">
           <p>I have worked on many large, high profile websites, including:</p>
           <ul>
+            <li>Tradeweb</li>
             <li>FIBA</li>
             <li>Canon</li>
             <li>DeBeers</li>
