Font-size fix for pdf and content update

--- a/public/sass/components/_base.scss
+++ b/public/sass/components/_base.scss
@@ -4,6 +4,12 @@ html, body {
   min-height: 100%;
 }
 
+html {
+  @media print {
+    font-size: 10px;
+  }
+}
+
 body {
   color: $base-font-color;
   font-family: $base-font-family;
